--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "canvas": "^3.1.0",
     "chartjs-node-canvas": "^5.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
